// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: test.cjs format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const A = <T,>() => {}
=====================================output=====================================
const A = <T,>() => {};

================================================================================
`;

exports[`snippet: test.cts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const A = <T,>() => {}
=====================================output=====================================
const A = <T,>() => {};

================================================================================
`;

exports[`snippet: test.js format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const A = <T,>() => {}
=====================================output=====================================
const A = <T,>() => {};

================================================================================
`;

exports[`snippet: test.jsx format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const A = <T,>() => {}
=====================================output=====================================
const A = <T,>() => {};

================================================================================
`;

exports[`snippet: test.mjs format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const A = <T,>() => {}
=====================================output=====================================
const A = <T,>() => {};

================================================================================
`;

exports[`snippet: test.mts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const A = <T,>() => {}
=====================================output=====================================
const A = <T,>() => {};

================================================================================
`;

exports[`snippet: test.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const A = <T,>() => {}
=====================================output=====================================
const A = <T>() => {};

================================================================================
`;

exports[`snippet: test.tsx format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const A = <T,>() => {}
=====================================output=====================================
const A = <T,>() => {};

================================================================================
`;

exports[`snippet: test.unknown format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const A = <T,>() => {}
=====================================output=====================================
const A = <T,>() => {};

================================================================================
`;

exports[`snippet: unnamed format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const A = <T,>() => {}
=====================================output=====================================
const A = <T,>() => {};

================================================================================
`;
